--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ol>
     </section>
     <div>
-        <p>For a visual step by step process, see <a href="https://www.youtube.com/watch?v=eIDUn0MsLjE">recipe video</a></p>
+        <p>For a visual step by step process of the dish's preparation process, see source video <a href="https://www.youtube.com/watch?v=eIDUn0MsLjE">recipe video</a>.</p>
     </div>
 </body>
 </html>
